Initial Draft of About Page
Accidentally did it in Index page first, copied code over from Index page.

Still needs nav/header image/styling for text etc.

Just a start to get content (copy and images) in there.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html language="en">
 <head>
-  <title>Mipso Final</title>
+  <title>Mipso</title>
+  <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
 </head>
 <body>
   <h1>Mipso Homepage</h1>
-  <h2>Yay We're Live!!!!!</h2>
+  <a href="./about.html">About Page</a>
+  </section>
+
 </body>
 </html>
