Fixing Font Problem in HTML

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <title>Mipso</title>
   <link href="assets/stylesheets/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
   <img class=full-band src="assets/images/about/full-band.png" alt="Group Photo of Mipso Band">
