About Page: Spacing & Positioning
Worked on spacing images and spacing out text.

--- a/about.html
+++ b/about.html
@@ -19,6 +19,12 @@
     </p>
   </section>
 
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+
   <section class="band-bullets">
 
     <div class="meet-the-band">
@@ -32,7 +38,7 @@
           <li>Wood Robinson, Bass & Vocals - pictured bottom right</li>
         </ul>
     </div>
-
+    <br />
     <div class="more-info">
       <h1 class="section-title">
         A LITTLE MORE INFO
@@ -45,12 +51,12 @@
           <li>Our label is Robust Records</li>
         </ul>
     </div>
-
+    <br />
     <div class="whats-mipso">
       <h1 class="section-title">
         WHAT THE HECK IS A 'MIPSO'?
       </h1>
-        <p>
+        <p class="whats-mipso-copy">
           Our name is inspired by our first tour after college in Japan, where we performed at the 43rd annual Takarazuka Bluegrass Festival and a concert at Tokyo's historic country music venue, Rocky Top. In Japanese, there is a phrase that means something familiar, but there's something a little bit off. This roughly translates, or at least so we were told, to 'a little pee in the miso.' Since the meaning of the phrase resonated with our cross-genre music, we decided to put a little P in the miso…and voila, Mipso!
         </p>
     </div>
