Tour Dates Page: First Try
Starting to get content onto tour dates page.

Still need nav & styling of table content etc.

Need to link out to buy now sites and format boxes around BUY NOW

--- a/about.html
+++ b/about.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html language="en">
 <head>
-  <title>Mipso</title>
+  <title>Mipso About Page</title>
   <link href="assets/stylesheets/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
+  <div class="page-banner about-hero">
+    <img src="assets/images/about/about-hero.png"
+  </div>
+
   <img class=full-band src="assets/images/about/full-band.png" alt="Group Photo of Mipso Band">
   <section class="about-summary">
     <p>
@@ -61,6 +65,5 @@
         </p>
     </div>
   </section>
-
 </body>
 </html>
