--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Mipso Homepage</h1>
   <a href="./about.html">About Page</a>
+  <a href="./tour-dates.html">Tour Dates</a>
   </section>
 
 </body>
