About + Tour Date Tweaks, Started working on navigation

--- a/about.html
+++ b/about.html
@@ -11,23 +11,16 @@
     <img src="assets/images/about/about-hero.png"
   </div>
 
-  <img class=full-band src="assets/images/about/full-band.png" alt="Group Photo of Mipso Band">
+  <img class="full-band" src="assets/images/about/full-band.png" alt="Group Photo of Mipso Band">
   <section class="about-summary">
     <p>
       Chapel Hill’s indie Americana quartet Mipso – Jacob Sharp (mandolin, vocals), Wood Robinson (bass, vocals), Joseph Terrell (guitar, vocals), and Libby Rodenbough (fiddle, vocals) – release their fifth album, Edges Run, on April 6th, 2018 via a newly inked record deal with AntiFragile Music. Influenced by the contradiction of its progressive home and the surrounding rural southern landscapes, Mipso has been hailed as “hewing surprisingly close to gospel and folk while still sounding modern and secular” (Acoustic Guitar) and was recently recognized by Rolling Stone as an “ Artist You Need to Know.” The band brings a distinctly unique sound – full of wistful beauty, hopeful undercurrents, and panoramic soundscapes.
     </p>
-    <img class=headshots src="assets/images/about/headshots.png" alt="Band Member Headshots">
-
     <p>
       Venturing ever-further from its string-band pedigree to discover a broader Americana where classic folk-rock and modern alt-country sounds mingle easily with Appalachian tradition, Mipso’s music is lush and forward moving, with lyrics that sear and salve in turn.  Look for Mipso on tour this spring in support of their new release, Edges Run.
     </p>
   </section>
-
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
+  <img class="headshots" src="assets/images/about/headshots.png" alt="Band Member Headshots">
 
   <section class="band-bullets">
 
