--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
   <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
 </head>
 <body>
-  <h1>Mipso Homepage</h1>
-  <a href="./about.html">About Page</a>
-  <a href="./tour-dates.html">Tour Dates</a>
-  </section>
+  <div class="logo">
+    <div class="col-xs-12 col-sm-4">
+      <a href="index.html">
+        <img class="logo" src="./assets/images/mipso-logo.png" alt="Mipso Logo"/>
+      </a>
+    </div>
+  </div>
+
+<nav class="navigation">
+  <div class="col-xs-12 col-sm-6">
+    <a href="about.html">ABOUT</a>
+    <a href="discography.html">DISCOGRAPHY</a>
+    <a href="music.html">MUSIC</a>
+    <a href="shop.html">SHOP</a>
+    <a href="tour-dates.html">ON TOUR</a>
+  </div>
+</nav>
+
+
+
 
 </body>
 </html>
