--- a/tour-dates.html
+++ b/tour-dates.html
@@ -12,107 +12,111 @@
   </div>
 
 <table>
-   <tr class=table-headers>
-     <th><h1>DATE</h1></th>
+   <tr class="table-headers">
+     <th class="date"><h1>DATE</h1></th>
      <th><h1>VENUE</h1></th>
      <th><h1>LOCATION</h1></th>
      <th><h1>BUY TICKETS</h1></th>
    </tr>
 
-  <tr class=table-content>
-    <td>10/5 FRI</td>
+  <tr class="table-content">
+    <td class="date">10/5 FRI</td>
     <td>THE BURL <br /> with Melanie Brulee, Ryvoli</td>
     <td>LEXINGTON, KY</td>
     <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now">
+      <a href="www.amazon.com" target="_blank">
+        <h3>BUY NOW</h3>
+      </a>
   </tr>
 
-  <tr class=table-content>
-    <td>10/6 SAT</td>
+  <tr class="table-content">
+    <td class="date">10/6 SAT</td>
     <td>3 SISTERS BLUEGRASS <br />FESTIVAL</td>
     <td>CHATTANOOGA, TN</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
-    <td>10/10 WED</td>
+  <tr class="table-content">
+    <td class="date">10/10 WED</td>
     <td>THE ACM @ UCO <br /> with Jason Scott</td>
-    <td>Oklahoma City, OK</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td>OKLAHOMA CITY, OK</td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
-    <td>10/11 THU </td>
+  <tr class="table-content">
+    <td class="date">10/11 THU </td>
     <td>BARLEYCORN'S<br /> with Jason Scott</td>
     <td>WICHITA, KS</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
-    <td>10/12 FRI </td>
+  <tr class="table-content">
+    <td class="date">10/12 FRI </td>
     <td>IVYWILD SCHOOL<br /> with Mike Clark</td>
     <td>COLORADO SPRINGS, CO</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
-    <td>10/13 SAT </td>
+  <tr class="table-content">
+    <td class="date">10/13 SAT </td>
     <td>BLUEBIRD THEATER<br /> with Whippoorwill</td>
     <td>DENVER, CO</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
+  <tr class="table-content">
     <td>10/21 SUN </td>
     <td>OUTDOOR MARKET: US NAT<br /> WHITEWATER CENTER</td>
     <td>CHARLOTTE, NC</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
-    <td>10/26 FRI </td>
+  <tr class="table-content">
+    <td class="date">10/26 FRI </td>
     <td>MIDDLE EAST DOWNSTAIRS<br /> with Sam Lewis Tunes</td>
     <td>CAMBRIDGE, MA</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
-    <td>10/27 SAT </td>
+  <tr class="table-content">
+    <td class="date">10/27 SAT </td>
     <td>BILLSVILLE HOUSE<br /> CONCERT</td>
     <td>MANCHESTER, VT</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
-    <td>10/28 SUN </td>
+  <tr class="table-content">
+    <td class="date">10/28 SUN </td>
     <td>THE BOWERY BALLROOM<br /> with Sam Lewis Tunes</td>
     <td>NEW YORK, NY</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
-    <td>10/30 TUE </td>
+  <tr class="table-content">
+    <td class="date">10/30 TUE </td>
     <td>LA VITROLA</td>
     <td>MONTREAL, CANADA</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
-    <td>11/1 THU </td>
+  <tr class="table-content">
+    <td class="date">11/1 THU </td>
     <td>PORTLAND HOUSE OF MUSIC<br /> with 10 String Symphony</td>
     <td>PORTLAND, ME</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
-  <tr class=table-content>
-    <td>11/2 FRI </td>
+  <tr class="table-content">
+    <td class="date">11/2 FRI </td>
     <td>STAGEONE<br /> with Dan Millsy</td>
-    <td>Fairfield, CT</td>
-    <td class=buy-now><h3>BUY NOW</h3></td>
+    <td>FAIRFIELD, CT</td>
+    <td class="buy-now"><h3>BUY NOW</h3></td>
   </tr>
 
 </table>
 
-<div class=tour-dates-announced-box>
+<div class="tour-dates-announced-box">
   <h1 class="section-title">MORE TOUR DATES <br /> TO BE ANNOUNCED</h1>
 </div>
 
