Working on Navigation Issues

--- a/about.html
+++ b/about.html
@@ -7,8 +7,23 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
-  <div class="page-banner about-hero">
-    <img src="assets/images/about/about-hero.png"
+  <div class="page-banner about-banner">
+      <a href="index.html">
+        <img class="logo" src="./assets/images/mipso-logo.png" alt="Mipso Logo"/>
+      </a>
+
+      <nav class="navigation">
+        <a href="about.html">ABOUT</a>
+        <a href="discography.html">DISCOGRAPHY</a>
+        <a href="music.html">MUSIC</a>
+        <a href="shop.html">SHOP</a>
+        <a href="tour-dates.html">ON TOUR</a>
+      </nav>
+
+      <div class="page-banner about-hero">
+        <img src="assets/images/about/about-hero.png"
+      </div>
+
   </div>
 
   <img class="full-band" src="assets/images/about/full-band.png" alt="Group Photo of Mipso Band">
