--- a/index.html
+++ b/index.html
@@ -3,28 +3,39 @@
 <head>
   <title>Mipso</title>
   <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
-  <div class="logo">
+  <div class="full-nav-row">
     <div class="col-xs-12 col-sm-4">
       <a href="index.html">
         <img class="logo" src="./assets/images/mipso-logo.png" alt="Mipso Logo"/>
       </a>
     </div>
-  </div>
 
-<nav class="navigation">
-  <div class="col-xs-12 col-sm-6">
-    <a href="about.html">ABOUT</a>
-    <a href="discography.html">DISCOGRAPHY</a>
-    <a href="music.html">MUSIC</a>
-    <a href="shop.html">SHOP</a>
-    <a href="tour-dates.html">ON TOUR</a>
-  </div>
-</nav>
+    <nav class="col-xs-12 col-sm-8">
+      <a href="about.html">ABOUT</a>
+      <a href="discography.html">DISCOGRAPHY</a>
+      <a href="music.html">MUSIC</a>
+      <a href="shop.html">SHOP</a>
+      <a href="tour-dates.html">ON TOUR</a>
+    </nav>
+</div>
 
+<div class="page-banner about-banner">
+    <a href="index.html">
+      <img class="logo" src="./assets/images/mipso-logo.png" alt="Mipso Logo"/>
+    </a>
 
-
+    <nav class="navigation">
+      <a href="about.html">ABOUT</a>
+      <a href="discography.html">DISCOGRAPHY</a>
+      <a href="music.html">MUSIC</a>
+      <a href="shop.html">SHOP</a>
+      <a href="tour-dates.html">ON TOUR</a>
+    </nav>
+</div>
 
 </body>
 </html>
