--- a/index.html
+++ b/index.html
@@ -7,21 +7,8 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
-  <div class="full-nav-row">
-    <div class="col-xs-12 col-sm-4">
-      <a href="index.html">
-        <img class="logo" src="./assets/images/mipso-logo.png" alt="Mipso Logo"/>
-      </a>
-    </div>
+  <img src="assets/images/home-hero.png" class="background alt="Mipso Band Group Photo">
 
-    <nav class="col-xs-12 col-sm-8">
-      <a href="about.html">ABOUT</a>
-      <a href="discography.html">DISCOGRAPHY</a>
-      <a href="music.html">MUSIC</a>
-      <a href="shop.html">SHOP</a>
-      <a href="tour-dates.html">ON TOUR</a>
-    </nav>
-</div>
 
 <div class="page-banner about-banner">
     <a href="index.html">
@@ -36,6 +23,10 @@
       <a href="tour-dates.html">ON TOUR</a>
     </nav>
 </div>
+
+
+
+
 
 </body>
 </html>
