More work on nav

--- a/about.html
+++ b/about.html
@@ -7,27 +7,24 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
-  <div class="page-banner about-banner">
-      <a href="index.html">
-        <img class="logo" src="./assets/images/mipso-logo.png" alt="Mipso Logo"/>
-      </a>
 
-      <nav class="navigation">
-        <a href="about.html">ABOUT</a>
-        <a href="discography.html">DISCOGRAPHY</a>
-        <a href="music.html">MUSIC</a>
-        <a href="shop.html">SHOP</a>
-        <a href="tour-dates.html">ON TOUR</a>
-      </nav>
-
-      <div class="page-banner about-hero">
-        <img src="assets/images/about/about-hero.png"
+  <div class="background-image">
+    <div class="container">
+        <div class="navigation">
+          <a href="about.html">ABOUT</a>
+          <a href="discography.html">DISCOGRAPHY</a>
+          <a href="music.html">MUSIC</a>
+          <a href="shop.html">SHOP</a>
+          <a href="tour-dates.html">ON TOUR</a>
+        </div>
       </div>
+    </div>
 
-  </div>
-
+<section class=full-band>
   <img class="full-band" src="assets/images/about/full-band.png" alt="Group Photo of Mipso Band">
-  <section class="about-summary">
+</section>
+
+<section class="about-summary">
     <p>
       Chapel Hill’s indie Americana quartet Mipso – Jacob Sharp (mandolin, vocals), Wood Robinson (bass, vocals), Joseph Terrell (guitar, vocals), and Libby Rodenbough (fiddle, vocals) – release their fifth album, Edges Run, on April 6th, 2018 via a newly inked record deal with AntiFragile Music. Influenced by the contradiction of its progressive home and the surrounding rural southern landscapes, Mipso has been hailed as “hewing surprisingly close to gospel and folk while still sounding modern and secular” (Acoustic Guitar) and was recently recognized by Rolling Stone as an “ Artist You Need to Know.” The band brings a distinctly unique sound – full of wistful beauty, hopeful undercurrents, and panoramic soundscapes.
     </p>
