--- a/music.html
+++ b/music.html
@@ -1,21 +1,120 @@
 <!DOCTYPE html>
-<html language="en">
+<html lang="en">
 <head>
   <title>Mipso Music Page</title>
-  <link href="assets/stylesheets/stylesheet.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/stylesheets/lightbox.min.css" />
+  <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 
+<body>
+  <!--Videos -->
+  <div class="wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <h1>VIDEOS</h1>
+        </div>
+        <!--Edges Run Video - large top center  -->
+        <div class="col-xs-12">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/RcfrzJdEM7M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class=video></iframe>
+        </div>
+        <!--People Change Video - small left -->
+        <div class="col-xs-12 col-sm-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/zG4SGUTSJ94" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/IXWhGNsPUPk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <!--Instagram Photos -->
+  <div class="wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <h1>INSTAGRAM</h1>
+        </div>
+    <!--Instagram Photo 1 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-1.jpg" data-lightbox="image1" data-title="Wood practicing before tonight's show in Asheville">
+          <img src="./assets/images/media-page/lightbox/thumbnail-1.png" />
+          </a>
+        </div>
+    <!--Instagram Photo 2 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-2.jpg" data-lightbox="image2" data-title="Our biggest fan in Denver this weekend">
+          <img src="./assets/images/media-page/lightbox/thumbnail-2.png" />
+          </a>
+        </div>
+    <!--Instagram Photo 3 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-3.jpg" data-lightbox="image3" data-title="Libby gets a bathroom mirror shot in every city we tour in">
+          <img src="./assets/images/media-page/lightbox/thumbnail-3.png" />
+          </a>
+        </div>
+    <!--Instagram Photo 4 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-4.jpg" data-lightbox="image4" data-title="Band practice self portrait">
+          <img src="./assets/images/media-page/lightbox/thumbnail-4.png" />
+          </a>
+        </div>
+      </div>
+      <div class="row">
+    <!--Instagram Photo 5 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-5.jpg" data-lightbox="image5" data-title="Happy birthday to me!">
+          <img src="./assets/images/media-page/lightbox/thumbnail-5.png" />
+          </a>
+        </div>
+    <!--Instagram Photo 6 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-6.jpg" data-lightbox="image6" data-title="Happy birthday to us!">
+          <img src="./assets/images/media-page/lightbox/thumbnail-6.png" />
+        </div>
+    <!--Instagram Photo 7 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-7.jpg" data-lightbox="image7" data-title="Happy birthday to us!">
+          <img src="./assets/images/media-page/lightbox/thumbnail-7.png" />
+          </div>
+    <!--Instagram Photo 8 -->
+        <div class="col-xs-3">
+            <a href="./assets/images/media-page/lightbox/insta-8.jpg" data-lightbox="image8" data-title="Happy birthday to us!">
+              <img src="./assets/images/media-page/lightbox/thumbnail-8.png" />
+        </div>
+      </div>
+      <div class="row">
+    <!--Instagram Photo 9 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="image9" data-title="Happy birthday to us!">
+          <img src="./assets/images/media-page/lightbox/thumbnail-9.png" />
+        </div>
+    <!--Instagram Photo 10 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-10.jpg" data-lightbox="image10" data-title="Happy birthday to us!">
+          <img src="./assets/images/media-page/lightbox/thumbnail-10.png" />
+        </div>
+    <!--Instagram Photo 11 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-11.jpg" data-lightbox="image11" data-title="Happy birthday to us!">
+          <img src="./assets/images/media-page/lightbox/thumbnail-11.png" />
+        </div>
+    <!--Instagram Photo 12 -->
+        <div class="col-xs-3">
+          <a href="./assets/images/media-page/lightbox/insta-12.jpg" data-lightbox="image12" data-title="Happy birthday to us!">
+          <img src="./assets/images/media-page/lightbox/thumbnail-12.png" />
+        </div>
+      </div>
 
-
-
-
-
-
-
-
-
+<script src="./assets/javascripts/bootstrap.min.js"></script>
+<script
+    src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+<script src="./assets/javascripts/lightbox.min.js"></script>
 </body>
 </html>
