Refining my music/media page

--- a/music.html
+++ b/music.html
@@ -11,13 +11,19 @@
 
 <body>
   <!--Videos -->
+<div class="work">
+
+</div>
+
   <div class="wrapper">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
           <h1>VIDEOS</h1>
         </div>
+      </div>
         <!--Edges Run Video - large top center  -->
+      <div class="row">
         <div class="col-xs-12">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/RcfrzJdEM7M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class=video></iframe>
         </div>
@@ -30,16 +36,18 @@
         </div>
       </div>
     </div>
-  </div>
 
   <!--Instagram Photos -->
+  <section class="instagram">
   <div class="wrapper">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
           <h1>INSTAGRAM</h1>
         </div>
+      </div>
     <!--Instagram Photo 1 -->
+      <div class="row instagram-padding">
         <div class="col-xs-3">
           <a href="./assets/images/media-page/lightbox/insta-1.jpg" data-lightbox="image1" data-title="Wood practicing before tonight's show in Asheville">
           <img src="./assets/images/media-page/lightbox/thumbnail-1.png" />
@@ -64,8 +72,8 @@
           </a>
         </div>
       </div>
-      <div class="row">
     <!--Instagram Photo 5 -->
+    <div class="row">
         <div class="col-xs-3">
           <a href="./assets/images/media-page/lightbox/insta-5.jpg" data-lightbox="image5" data-title="Happy birthday to me!">
           <img src="./assets/images/media-page/lightbox/thumbnail-5.png" />
@@ -80,15 +88,15 @@
         <div class="col-xs-3">
           <a href="./assets/images/media-page/lightbox/insta-7.jpg" data-lightbox="image7" data-title="Happy birthday to us!">
           <img src="./assets/images/media-page/lightbox/thumbnail-7.png" />
-          </div>
+        </div>
     <!--Instagram Photo 8 -->
         <div class="col-xs-3">
             <a href="./assets/images/media-page/lightbox/insta-8.jpg" data-lightbox="image8" data-title="Happy birthday to us!">
               <img src="./assets/images/media-page/lightbox/thumbnail-8.png" />
         </div>
       </div>
-      <div class="row">
     <!--Instagram Photo 9 -->
+    <div class="row">
         <div class="col-xs-3">
           <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="image9" data-title="Happy birthday to us!">
           <img src="./assets/images/media-page/lightbox/thumbnail-9.png" />
@@ -109,6 +117,7 @@
           <img src="./assets/images/media-page/lightbox/thumbnail-12.png" />
         </div>
       </div>
+  </section>
 
 <script src="./assets/javascripts/bootstrap.min.js"></script>
 <script
