Fixing stylesheet link up issue

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html language="en">
 <head>
   <title>Mipso About Page</title>
-  <link href="assets/stylesheets/stylesheet.css" rel="stylesheet" />
+  <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
