--- a/music.html
+++ b/music.html
@@ -3,10 +3,10 @@
 <head>
   <title>Mipso Music Page</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/stylesheets/lightbox.min.css" />
   <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
+  <link rel="stylesheet" href="./assets/stylesheets/lightbox.min.css" />
 </head>
 
 <body>
@@ -47,7 +47,7 @@
         </div>
       </div>
     <!--Instagram Photo 1 -->
-      <div class="row instagram-padding">
+      <div class="row instagram">
         <div class="col-xs-3">
           <a href="./assets/images/media-page/lightbox/insta-1.jpg" data-lightbox="image1" data-title="Wood practicing before tonight's show in Asheville">
           <img src="./assets/images/media-page/lightbox/thumbnail-1.png" />
@@ -73,7 +73,7 @@
         </div>
       </div>
     <!--Instagram Photo 5 -->
-    <div class="row">
+    <div class="row instagram">
         <div class="col-xs-3">
           <a href="./assets/images/media-page/lightbox/insta-5.jpg" data-lightbox="image5" data-title="Happy birthday to me!">
           <img src="./assets/images/media-page/lightbox/thumbnail-5.png" />
@@ -96,7 +96,7 @@
         </div>
       </div>
     <!--Instagram Photo 9 -->
-    <div class="row">
+    <div class="row instagram">
         <div class="col-xs-3">
           <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="image9" data-title="Happy birthday to us!">
           <img src="./assets/images/media-page/lightbox/thumbnail-9.png" />
@@ -119,12 +119,11 @@
       </div>
   </section>
 
-<script
-    src="http://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="./assets/javascripts/lightbox.min.js"></script>
-<script src="./assets/javascripts/bootstrap.min.js"></script>
+  <script src="./assets/javascripts/bootstrap.min.js"></script>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
+  <script src="./assets/javascripts/lightbox.min.js"></script>
 </body>
 </html>
