--- a/testing.html
+++ b/testing.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Twitter Bootstrap</title>
-  <!-- <link href="./assets/stylesheets/bootstrap.min.css" rel="stylesheet"/> -->
-  <!-- Latest compiled and minified CSS -->
+  <title>Get Shit Working</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
+  <link href="./assets/stylesheets/testing.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
+  <link rel="stylesheet" href="./assets/stylesheets/lightbox.min.css" />
 </head>
 
 <body>
@@ -17,6 +16,8 @@
         <div class="col-xs-12">
           <h1>Twitter Bootstrap</h1>
         </div>
+      </div>
+      <div class="row">
         <div class="col-xs-12 col-sm-6" style="background: blue">
           Left
         </div>
@@ -27,7 +28,13 @@
     </div>
   </div>
 
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="./assets/javascripts/bootstrap.min.js"></script>
+<script src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+<script src="./assets/javascripts/lightbox.min.js"></script>
 </body>
 </html>
