Fixing font issue

--- a/music.html
+++ b/music.html
@@ -23,7 +23,7 @@
         </div>
       </div>
         <!--Edges Run Video - large top center  -->
-      <div class="row">
+      <div class="row feature-video">
         <div class="col-xs-12">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/RcfrzJdEM7M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class=video></iframe>
         </div>
@@ -47,7 +47,7 @@
         </div>
       </div>
     <!--Instagram Photo 1 -->
-      <div class="row instagram">
+      <div class="row">
         <div class="col-xs-3">
           <a href="./assets/images/media-page/lightbox/insta-1.jpg" data-lightbox="image1" data-title="Wood practicing before tonight's show in Asheville">
           <img src="./assets/images/media-page/lightbox/thumbnail-1.png" />
@@ -96,7 +96,7 @@
         </div>
       </div>
     <!--Instagram Photo 9 -->
-    <div class="row instagram">
+    <div class="row instagram lower">
         <div class="col-xs-3">
           <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="image9" data-title="Happy birthday to us!">
           <img src="./assets/images/media-page/lightbox/thumbnail-9.png" />
