Fixing styling across my pages

--- a/about.html
+++ b/about.html
@@ -2,22 +2,12 @@
 <html language="en">
 <head>
   <title>Mipso About Page</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
-
-  <div class="background-image">
-        <div class="navigation">
-          <a href="about.html">ABOUT</a>
-          <a href="discography.html">DISCOGRAPHY</a>
-          <a href="music.html">MUSIC</a>
-          <a href="shop.html">SHOP</a>
-          <a href="tour-dates.html">ON TOUR</a>
-        </div>
-    </div>
-
 <section class=full-band>
   <img class="full-band" src="assets/images/about/full-band.png" alt="Group Photo of Mipso Band">
 </section>
@@ -33,7 +23,6 @@
   <img class="headshots" src="assets/images/about/headshots.png" alt="Band Member Headshots">
 
   <section class="band-bullets">
-
     <div class="meet-the-band">
       <h1 class="section-title">
         MEET THE BAND
