--- a/music.html
+++ b/music.html
@@ -75,45 +75,45 @@
     <!--Instagram Photo 5 -->
     <div class="row instagram">
         <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-5.jpg" data-lightbox="image5" data-title="Happy birthday to me!">
+          <a href="./assets/images/media-page/lightbox/insta-5.jpg" data-lightbox="image5" data-title="Happy birthday to us!">
           <img src="./assets/images/media-page/lightbox/thumbnail-5.png" />
           </a>
         </div>
     <!--Instagram Photo 6 -->
         <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-6.jpg" data-lightbox="image6" data-title="Happy birthday to us!">
+          <a href="./assets/images/media-page/lightbox/insta-6.jpg" data-lightbox="image6" data-title="Beautiful night to wrap up our Rocky Mt. Tour!">
           <img src="./assets/images/media-page/lightbox/thumbnail-6.png" />
         </div>
     <!--Instagram Photo 7 -->
         <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-7.jpg" data-lightbox="image7" data-title="Happy birthday to us!">
+          <a href="./assets/images/media-page/lightbox/insta-7.jpg" data-lightbox="image7" data-title="Look mama, we've made it.">
           <img src="./assets/images/media-page/lightbox/thumbnail-7.png" />
         </div>
     <!--Instagram Photo 8 -->
         <div class="col-xs-3">
-            <a href="./assets/images/media-page/lightbox/insta-8.jpg" data-lightbox="image8" data-title="Happy birthday to us!">
+            <a href="./assets/images/media-page/lightbox/insta-8.jpg" data-lightbox="image8" data-title="Vermont in August is the place to be.">
               <img src="./assets/images/media-page/lightbox/thumbnail-8.png" />
         </div>
       </div>
     <!--Instagram Photo 9 -->
     <div class="row instagram lower">
         <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="image9" data-title="Happy birthday to us!">
+          <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="image9" data-title="Headed to Dierks Bentley‘s Seven Peaks Fest in Colorado. So far we have fond feelings for Dierks. Plus he understands what it’s like to have a weird band name.">
           <img src="./assets/images/media-page/lightbox/thumbnail-9.png" />
         </div>
     <!--Instagram Photo 10 -->
         <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-10.jpg" data-lightbox="image10" data-title="Happy birthday to us!">
+          <a href="./assets/images/media-page/lightbox/insta-10.jpg" data-lightbox="image10" data-title="It's 97 degrees in Salt Lake City. We're ready to unload this wagon!">
           <img src="./assets/images/media-page/lightbox/thumbnail-10.png" />
         </div>
     <!--Instagram Photo 11 -->
         <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-11.jpg" data-lightbox="image11" data-title="Happy birthday to us!">
+          <a href="./assets/images/media-page/lightbox/insta-11.jpg" data-lightbox="image11" data-title="Chicago didn't disappoint - and it never does!">
           <img src="./assets/images/media-page/lightbox/thumbnail-11.png" />
         </div>
     <!--Instagram Photo 12 -->
         <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-12.jpg" data-lightbox="image12" data-title="Happy birthday to us!">
+          <a href="./assets/images/media-page/lightbox/insta-12.jpg" data-lightbox="image12" data-title="Come hang out with us in Brooklyn">
           <img src="./assets/images/media-page/lightbox/thumbnail-12.png" />
         </div>
       </div>
