--- a/testing.html
+++ b/testing.html
@@ -38,3 +38,35 @@
 <script src="./assets/javascripts/lightbox.min.js"></script>
 </body>
 </html>
+
+
+
+
+
+<!--code from attempt at a nav  -->
+<div class="background-image">
+      <div class="navigation">
+        <a href="about.html">ABOUT</a>
+        <a href="discography.html">DISCOGRAPHY</a>
+        <a href="music.html">MUSIC</a>
+        <a href="shop.html">SHOP</a>
+        <a href="tour-dates.html">ON TOUR</a>
+      </div>
+  </div>
+
+<!--CSS from nav attempt  -->
+  .navigation {
+      font-family: 'Raleway', sans-serif;
+      color: #D8D8D8;
+      font-size: 16pt;
+      overflow: hidden;
+      background-color: rgba(248, 248, 255, 0);
+
+  .navigation.a:hover {
+      background-color: #D8D8D8;
+      color: #605D5D;
+    }
+
+    .navigation a {
+      padding-right: 20px;
+    }
