--- a/tour-dates.html
+++ b/tour-dates.html
@@ -117,11 +117,8 @@
 </table>
 
 <div class="tour-dates-announced-box">
-  <h1 class="section-title">MORE TOUR DATES <br /> TO BE ANNOUNCED</h1>
+  <p>MORE TOUR DATES <br /> TO BE ANNOUNCED</p>
 </div>
-
-
-
 
 </body>
 </html>
