--- a/testing.html
+++ b/testing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Get Shit Working</title>
+  <title>Building Out Navigation</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="./assets/stylesheets/testing.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
@@ -10,63 +10,35 @@
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <h1>Twitter Bootstrap</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 col-sm-6" style="background: blue">
-          Left
-        </div>
-        <div class="col-xs-12 col-sm-6" style="background: red">
-          Right
-        </div>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
     </div>
-  </div>
+  </nav>
 
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="./assets/javascripts/bootstrap.min.js"></script>
-<script src="http://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-<script src="./assets/javascripts/lightbox.min.js"></script>
+
+
+
+
+
 </body>
 </html>
-
-
-
-
-
-<!--code from attempt at a nav  -->
-<div class="background-image">
-      <div class="navigation">
-        <a href="about.html">ABOUT</a>
-        <a href="discography.html">DISCOGRAPHY</a>
-        <a href="music.html">MUSIC</a>
-        <a href="shop.html">SHOP</a>
-        <a href="tour-dates.html">ON TOUR</a>
-      </div>
-  </div>
-
-<!--CSS from nav attempt  -->
-  .navigation {
-      font-family: 'Raleway', sans-serif;
-      color: #D8D8D8;
-      font-size: 16pt;
-      overflow: hidden;
-      background-color: rgba(248, 248, 255, 0);
-
-  .navigation.a:hover {
-      background-color: #D8D8D8;
-      color: #605D5D;
-    }
-
-    .navigation a {
-      padding-right: 20px;
-    }
