--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html language="en">
+<html language="en" class="index">
 <head>
   <title>Mipso</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
-  <img src="assets/images/home-hero.png" class="background alt="Mipso Band Group Photo">
-
-
-<div class="page-banner about-banner">
-    <a href="index.html">
-      <img class="logo" src="./assets/images/mipso-logo.png" alt="Mipso Logo"/>
-    </a>
-
-    <nav class="navigation">
-      <a href="about.html">ABOUT</a>
-      <a href="discography.html">DISCOGRAPHY</a>
-      <a href="music.html">MUSIC</a>
-      <a href="shop.html">SHOP</a>
-      <a href="tour-dates.html">ON TOUR</a>
-    </nav>
-</div>
 
 
 
 
 
+
+
+
+
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="./assets/javascripts/bootstrap.min.js"></script>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
 </body>
 </html>
