--- a/music.html
+++ b/music.html
@@ -25,9 +25,9 @@
         <!--Edges Run Video - large top center  -->
       <div class="row feature-video">
         <div class="col-xs-12">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/RcfrzJdEM7M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class=video></iframe>
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/RcfrzJdEM7M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class=video></iframe>
         </div>
-        <!--People Change Video - small left -->
+        <!--Lower two videos -->
         <div class="col-xs-12 col-sm-6">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/zG4SGUTSJ94" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
