--- a/testing.html
+++ b/testing.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Building Out Navigation</title>
+  <!-- <title>Building Out Navigation</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link href="./assets/stylesheets/testing.css" rel="stylesheet" />
+  <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
   <link rel="stylesheet" href="./assets/stylesheets/lightbox.min.css" />
 </head>
-
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
+    <a class="navbar-brand" href="index.html">
+      <img src="./assets/images/mipso-logo.png" alt="Mipso Logo" />
+    </a>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="about.html">ABOUT </a>
+          <a class="nav-item nav-link" href="discography.html">DISCOGRAPHY</a>
+          <a class="nav-item nav-link" href="music.html">MUSIC</a>
+          <a class="nav-item nav-link disabled" href="shop.html">SHOP</a>
+          <a class="nav-item nav-link disabled" href="tour-dates.html">ON TOUR</a>
+        </div>
     </div>
-  </nav>
+  </nav> -->
 
+  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">
+      <img src="./assets/images/mipso-logo.png" alt="Mipso Logo" />
+    </a>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="about.html">ABOUT <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="discography.html">DISCOGRAPHY</a>
+      <a class="nav-item nav-link" href="music.html">MUSIC</a>
+      <a class="nav-item nav-link disabled" href="shop.html">SHOP</a>
+      <a class="nav-item nav-link disabled" href="tour-dates.html">ON TOUR</a>
+    </div>
+  </div>
+</nav>
+ -->
+
+ <div class="wrapper">
+   <div class="container">
+     <div class="row">
+       <div class="col-xs-12 col-sm-4">
+         LOGO CONTENT GOES HERE
+       </div>
+     </div>
+       <div class="col-xs-12 col-sm-8">
+         NAV MENU LINKS GO HERE
+       </div>
+     </div>
+    </div>
+  </div>
 
 
 
