--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
-
+  <div class="container nav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">
+        <img src="./assets/images/mipso-logo.png" />
+      </a>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="about.html">ABOUT <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="music.html">MUSIC</a>
+        <a class="nav-item nav-link" href="discography.html">DISCOGRAPHY</a>
+        <a class="nav-item nav-link" href="merch.html">SHOP</a>
+        <a class="nav-item nav-link disabled" href="tour-dates.html">ON TOUR</a>
+      </div>
+    </div>
+    </nav>
+  </div>
 
 
 
