Banner - working on it

--- a/about.html
+++ b/about.html
@@ -8,6 +8,15 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
+
+<div class="container">
+  <div class="row about-banner">
+    <div class="col-lg-12">
+      <img src="./assets/images/about/about-hero.png" />
+    </div>
+  </div>
+</div>
+
 <section class=full-band>
   <img class="full-band" src="assets/images/about/full-band.png" alt="Group Photo of Mipso Band">
 </section>
