--- a/tour-dates.html
+++ b/tour-dates.html
@@ -7,8 +7,12 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
-  <div class="page-banner tour-dates-hero">
-    <img src="assets/images/tour-dates/tour-dates-hero.png"
+  <div class="container">
+    <div class="row about-banner">
+      <div class="col-lg-12">
+        <img src="assets/images/tour-dates/tour-dates-hero.png" />
+      </div>
+    </div>
   </div>
 
 <table>
