Navigation and new homepage on test - finally!

--- a/media.html
+++ b/media.html
@@ -21,7 +21,7 @@
         <!--Edges Run Video - large top center  -->
       <div class="row feature-video">
         <div class="col-xs-12">
-          <iframe width="100%" height="315" src="https://www.youtube.com/embed/RcfrzJdEM7M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class=video></iframe>
+          <iframe width="560px" height="315" src="https://www.youtube.com/embed/RcfrzJdEM7M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class=video></iframe>
         </div>
         <!--Lower two videos -->
         <div class="col-xs-12 col-sm-6">
