--- a/test.html
+++ b/test.html
@@ -3,14 +3,18 @@
 <head>
   <title>Mipso</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/stylesheets/test.css" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
-  <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
 </head>
 <body>
+  <!-- <img src="assets/images/home-hero.png" id="bg" alt=""> -->
 
-<div class=container>
-<nav class="navbar navbar-default">
+<div id="bg">
+  <img src="assets/images/home-hero.png" alt="">
+</div>
+
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -32,38 +36,12 @@
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="media.html">MEDIA</a></li>
         <li><a href="discography.html">DISCOGRAPHY</a></li>
-        <li><a href="merch.html">MERCH</a></li>
+        <li><a href="merch.html">SHOP</a></li>
+        <li><a href="tour-dates.html">ON TOUR</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-</div>
-
-  <!-- <div class="container nav">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">
-        <img src="./assets/images/mipso-logo.png" />
-      </a>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="about.html">ABOUT <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="media.html">MEDIA</a>
-        <a class="nav-item nav-link" href="discography.html">DISCOGRAPHY</a>
-        <a class="nav-item nav-link" href="merch.html">SHOP</a>
-        <a class="nav-item nav-link disabled" href="tour-dates.html">ON TOUR</a>
-      </div>
-    </div>
-    </nav>
-  </div> -->
-
-
-
-
-
-
-
-
-
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
