--- a/media.html
+++ b/media.html
@@ -19,11 +19,16 @@
         </div>
       </div>
         <!--Edges Run Video - large top center  -->
-      <div class="row feature-video">
-        <div class="col-xs-12">
+      <div class="row feature-videos">
+        <div class="col-xs-12 col-sm-6">
           <iframe width="560px" height="315" src="https://www.youtube.com/embed/RcfrzJdEM7M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class=video></iframe>
         </div>
+        <div class="col-xs-12 col-sm-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Y-bmf2-spNg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
         <!--Lower two videos -->
+      <div class="row lower-videos">
         <div class="col-xs-12 col-sm-6">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/zG4SGUTSJ94" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
@@ -33,87 +38,17 @@
       </div>
     </div>
 
-  <!--Instagram Photos -->
-  <section class="instagram">
-  <div class="wrapper">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <h1>INSTAGRAM</h1>
+    <!--Instagram Photos -->
+    <section class="instagram">
+    <div class="wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <h1>INSTAGRAM</h1>
+          </div>
         </div>
-      </div>
-    <!--Instagram Photo 1 -->
-      <div class="row">
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-1.jpg" data-lightbox="image1" data-title="Wood practicing before tonight's show in Asheville">
-          <img src="./assets/images/media-page/lightbox/thumbnail-1.png" />
-          </a>
-        </div>
-    <!--Instagram Photo 2 -->
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-2.jpg" data-lightbox="image2" data-title="Our biggest fan in Denver this weekend">
-          <img src="./assets/images/media-page/lightbox/thumbnail-2.png" />
-          </a>
-        </div>
-    <!--Instagram Photo 3 -->
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-3.jpg" data-lightbox="image3" data-title="Libby gets a bathroom mirror shot in every city we tour in">
-          <img src="./assets/images/media-page/lightbox/thumbnail-3.png" />
-          </a>
-        </div>
-    <!--Instagram Photo 4 -->
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-4.jpg" data-lightbox="image4" data-title="Band practice self portrait">
-          <img src="./assets/images/media-page/lightbox/thumbnail-4.png" />
-          </a>
-        </div>
-      </div>
-    <!--Instagram Photo 5 -->
-    <div class="row instagram">
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-5.jpg" data-lightbox="image5" data-title="Happy birthday to us!">
-          <img src="./assets/images/media-page/lightbox/thumbnail-5.png" />
-          </a>
-        </div>
-    <!--Instagram Photo 6 -->
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-6.jpg" data-lightbox="image6" data-title="Beautiful night to wrap up our Rocky Mt. Tour!">
-          <img src="./assets/images/media-page/lightbox/thumbnail-6.png" />
-        </div>
-    <!--Instagram Photo 7 -->
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-7.jpg" data-lightbox="image7" data-title="Look mama, we've made it.">
-          <img src="./assets/images/media-page/lightbox/thumbnail-7.png" />
-        </div>
-    <!--Instagram Photo 8 -->
-        <div class="col-xs-3">
-            <a href="./assets/images/media-page/lightbox/insta-8.jpg" data-lightbox="image8" data-title="Vermont in August is the place to be.">
-              <img src="./assets/images/media-page/lightbox/thumbnail-8.png" />
-        </div>
-      </div>
-    <!--Instagram Photo 9 -->
-    <div class="row instagram lower">
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="image9" data-title="Headed to Dierks Bentley‘s Seven Peaks Fest in Colorado. So far we have fond feelings for Dierks. Plus he understands what it’s like to have a weird band name.">
-          <img src="./assets/images/media-page/lightbox/thumbnail-9.png" />
-        </div>
-    <!--Instagram Photo 10 -->
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-10.jpg" data-lightbox="image10" data-title="It's 97 degrees in Salt Lake City. We're ready to unload this wagon!">
-          <img src="./assets/images/media-page/lightbox/thumbnail-10.png" />
-        </div>
-    <!--Instagram Photo 11 -->
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-11.jpg" data-lightbox="image11" data-title="Chicago didn't disappoint - and it never does!">
-          <img src="./assets/images/media-page/lightbox/thumbnail-11.png" />
-        </div>
-    <!--Instagram Photo 12 -->
-        <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-12.jpg" data-lightbox="image12" data-title="Come hang out with us in Brooklyn">
-          <img src="./assets/images/media-page/lightbox/thumbnail-12.png" />
-        </div>
-      </div>
-  </section>
+
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="./assets/javascripts/bootstrap.min.js"></script>
