Music Page Hovers

--- a/discography.html
+++ b/discography.html
@@ -40,10 +40,32 @@
         </ol>
       </div>
 <!-- EDGES RUN ALBUM COVER -->
-      <div class="col-lg-4">
+    <div class="col-lg-4 cover">
+      <!-- <div class="container cover"> -->
         <img src="assets/images/discography/edges-run-cover.jpg" />
+        <div class="overlay">
+          <div class="text">
+            <p>
+              EDGES RUN
+            </p>
+            <br />
+            <p>
+              RELEASED 5/6/18
+            </p>
+            <br />
+            <p>
+              PUBLISHED BY ANTIGRAGILE MUSIC
+            </p>
+            <br />
+            <p>
+              GENRE: COUNTRY
+            </p>
+          <!-- </div> -->
+        </div>
       </div>
     </div>
+</div>
+
 <!--COMING DOWN THE MOUNTAIN HEADER -->
   <div class="row album-header">
     <div class="col-lg-12">
@@ -71,10 +93,29 @@
           </ol>
         </div>
 <!-- EDGES RUN ALBUM COVER -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 cover">
           <img src="assets/images/discography/coming-down-the-mountain-cover.jpg" />
+          <div class="overlay">
+            <div class="text">
+              <p>
+                COMING DOWN THE MOUNTAIN
+              </p>
+              <br />
+              <p>
+                RELEASED 5/7/17
+              </p>
+              <br />
+              <p>
+                PUBLISHED BY MIPSO LLC
+              </p>
+              <br />
+              <p>
+                GENRE: CONTEMPORARY FOLK
+              </p>
         </div>
       </div>
+    </div>
+  </div>
 <!--OLDER ALBUM COVER HEADERS  -->
   <div class="row album-header">
     <div class="col-lg-6">
@@ -86,8 +127,27 @@
   </div>
 <!--OLDER ALBUM COVERS + TRACKS-->
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-lg-3 cover">
         <img src="assets/images/discography/old-time-reverie-cover.jpg" />
+        <div class="small-overlay">
+          <div class="small-text">
+            <p>
+              OLD TIME REVERIE
+            </p>
+            <br />
+            <p>
+              RELEASED 10/2/2015
+            </p>
+            <br />
+            <p>
+              PUBLISHED BY MIPSO LLC
+            </p>
+            <br />
+            <p>
+              GENRE: FOLK
+            </p>
+      </div>
+    </div>
     </div>
     <div class="col-lg-3">
       <ol class="album-tracks">
@@ -104,8 +164,27 @@
         <li>4 tradition</li>
       </ol>
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-3 cover">
         <img src="assets/images/discography/dark-holler-pop-cover.jpg" />
+        <div class="small-overlay">
+          <div class="small-text">
+            <p>
+              DARK HOLLER POP
+            </p>
+            <br />
+            <p>
+              RELEASED 10/26/2013
+            </p>
+            <br />
+            <p>
+              PUBLISHED BY MIPSO LLC
+            </p>
+            <br />
+            <p>
+              GENRE: FOLK ROCK
+            </p>
+      </div>
+    </div>
     </div>
     <div class="col-lg-3">
       <ol class="album-tracks">
