--- a/testlightbox.html
+++ b/testlightbox.html
@@ -23,25 +23,25 @@
   <!--Instagram Photo 1 -->
     <div class="row">
       <div class="col-xs-12 col-sm-3">
-        <a href="./assets/images/media-page/lightbox/insta-1.jpg" data-lightbox="image1" data-title="Wood practicing before tonight's show in Asheville">
+        <a href="./assets/images/media-page/lightbox/insta-1.jpg" data-lightbox="mipso-instagram" data-title="Wood practicing before tonight's show in Asheville">
         <img src="./assets/images/media-page/lightbox/thumbnail-1.png" />
         </a>
       </div>
   <!--Instagram Photo 2 -->
       <div class="col-xs-12 col-sm-3">
-        <a href="./assets/images/media-page/lightbox/insta-2.jpg" data-lightbox="image2" data-title="Our biggest fan in Denver this weekend">
+        <a href="./assets/images/media-page/lightbox/insta-2.jpg" data-lightbox="mipso-instagram" data-title="Our biggest fan in Denver this weekend">
         <img src="./assets/images/media-page/lightbox/thumbnail-2.png" />
         </a>
       </div>
   <!--Instagram Photo 3 -->
       <div class="col-xs-12 col-sm-3">
-        <a href="./assets/images/media-page/lightbox/insta-3.jpg" data-lightbox="image3" data-title="Libby gets a bathroom mirror shot in every city we tour in">
+        <a href="./assets/images/media-page/lightbox/insta-3.jpg" data-lightbox="mipso-instagram" data-title="Libby gets a bathroom mirror shot in every city we tour in">
         <img src="./assets/images/media-page/lightbox/thumbnail-3.png" />
         </a>
       </div>
   <!--Instagram Photo 4 -->
       <div class="col-xs-3">
-        <a href="./assets/images/media-page/lightbox/insta-4.jpg" data-lightbox="image4" data-title="Band practice self portrait">
+        <a href="./assets/images/media-page/lightbox/insta-4.jpg" data-lightbox="mipso-instagram" data-title="Band practice self portrait">
         <img src="./assets/images/media-page/lightbox/thumbnail-4.png" />
         </a>
       </div>
@@ -49,45 +49,45 @@
   <!--Instagram Photo 5 -->
   <div class="row instagram">
       <div class="col-xs-3">
-        <a href="./assets/images/media-page/lightbox/insta-5.jpg" data-lightbox="image5" data-title="Happy birthday to us!">
+        <a href="./assets/images/media-page/lightbox/insta-5.jpg" data-lightbox="mipso-instagram" data-title="Happy birthday to us!">
         <img src="./assets/images/media-page/lightbox/thumbnail-5.png" />
         </a>
       </div>
   <!--Instagram Photo 6 -->
       <div class="col-xs-3">
-        <a href="./assets/images/media-page/lightbox/insta-6.jpg" data-lightbox="image6" data-title="Beautiful night to wrap up our Rocky Mt. Tour!">
+        <a href="./assets/images/media-page/lightbox/insta-6.jpg" data-lightbox="mipso-instagram" data-title="Beautiful night to wrap up our Rocky Mt. Tour!">
         <img src="./assets/images/media-page/lightbox/thumbnail-6.png" />
       </div>
   <!--Instagram Photo 7 -->
       <div class="col-xs-3">
-        <a href="./assets/images/media-page/lightbox/insta-7.jpg" data-lightbox="image7" data-title="Look mama, we've made it.">
+        <a href="./assets/images/media-page/lightbox/insta-7.jpg" data-lightbox="mipso-instagram" data-title="Look mama, we've made it.">
         <img src="./assets/images/media-page/lightbox/thumbnail-7.png" />
       </div>
   <!--Instagram Photo 8 -->
       <div class="col-xs-3">
-          <a href="./assets/images/media-page/lightbox/insta-8.jpg" data-lightbox="image8" data-title="Vermont in August is the place to be.">
+          <a href="./assets/images/media-page/lightbox/insta-8.jpg" data-lightbox="mipso-instagram" data-title="Vermont in August is the place to be.">
             <img src="./assets/images/media-page/lightbox/thumbnail-8.png" />
       </div>
     </div>
   <!--Instagram Photo 9 -->
   <div class="row instagram lower">
       <div class="col-xs-3">
-        <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="image9" data-title="Headed to Dierks Bentley‘s Seven Peaks Fest in Colorado. So far we have fond feelings for Dierks. Plus he understands what it’s like to have a weird band name.">
+        <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="mipso-instagram" data-title="Headed to Dierks Bentley‘s Seven Peaks Fest in Colorado. So far we have fond feelings for Dierks. Plus he understands what it’s like to have a weird band name.">
         <img src="./assets/images/media-page/lightbox/thumbnail-9.png" />
       </div>
   <!--Instagram Photo 10 -->
       <div class="col-xs-3">
-        <a href="./assets/images/media-page/lightbox/insta-10.jpg" data-lightbox="image10" data-title="It's 97 degrees in Salt Lake City. We're ready to unload this wagon!">
+        <a href="./assets/images/media-page/lightbox/insta-10.jpg" data-lightbox="mipso-instagram" data-title="It's 97 degrees in Salt Lake City. We're ready to unload this wagon!">
         <img src="./assets/images/media-page/lightbox/thumbnail-10.png" />
       </div>
   <!--Instagram Photo 11 -->
       <div class="col-xs-3">
-        <a href="./assets/images/media-page/lightbox/insta-11.jpg" data-lightbox="image11" data-title="Chicago didn't disappoint - and it never does!">
+        <a href="./assets/images/media-page/lightbox/insta-11.jpg" data-lightbox="mipso-instagram" data-title="Chicago didn't disappoint - and it never does!">
         <img src="./assets/images/media-page/lightbox/thumbnail-11.png" />
       </div>
   <!--Instagram Photo 12 -->
       <div class="col-xs-3">
-        <a href="./assets/images/media-page/lightbox/insta-12.jpg" data-lightbox="image12" data-title="Come hang out with us in Brooklyn">
+        <a href="./assets/images/media-page/lightbox/insta-12.jpg" data-lightbox="mipso-instagram" data-title="Come hang out with us in Brooklyn">
         <img src="./assets/images/media-page/lightbox/thumbnail-12.png" />
       </div>
     </div>
