--- a/about.html
+++ b/about.html
@@ -9,6 +9,39 @@
 </head>
 
 <body>
+  <div class="row about-banner">
+    <div class="col-xs-12 col-md-12">
+      <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">
+            <img class="img-responsive" alt="Brand" src="./assets/images/mipso-logo.png">
+          </a>
+          <!-- <a class="navbar-brand" href="#">Brand</a> -->
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="media.html">MEDIA</a></li>
+            <li><a href="discography.html">DISCOGRAPHY</a></li>
+            <li><a href="merch.html">SHOP</a></li>
+            <li><a href="tour-dates.html">ON TOUR</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+      </nav>
+    </div>
+  </div>
+
   <div class="container">
     <div class="row about-section">
       <div class="col-md-6"<p>Chapel Hill’s indie Americana quartet Mipso – Jacob Sharp (mandolin, vocals), Wood Robinson (bass, vocals), Joseph Terrell (guitar, vocals), and Libby Rodenbough (fiddle, vocals) – release their fifth album, Edges Run, on April 6th, 2018 via a newly inked record deal with AntiFragile Music. Influenced by the contradiction of its progressive home and the surrounding rural southern landscapes, Mipso has been hailed as “hewing surprisingly close to gospel and folk while still sounding modern and secular” (Acoustic Guitar) and was recently recognized by Rolling Stone as an “ Artist You Need to Know.” The band brings a distinctly unique sound – full of wistful beauty, hopeful undercurrents, and panoramic soundscapes.</p>
