--- a/media.html
+++ b/media.html
@@ -10,6 +10,40 @@
 </head>
 
 <body>
+  <div class="row media-banner">
+    <div class="col-xs-12 col-md-12">
+      <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">
+            <img class="img-responsive" alt="Brand" src="./assets/images/mipso-logo.png">
+          </a>
+          <!-- <a class="navbar-brand" href="#">Brand</a> -->
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="media.html">MEDIA</a></li>
+            <li><a href="discography.html">DISCOGRAPHY</a></li>
+            <li><a href="merch.html">SHOP</a></li>
+            <li><a href="tour-dates.html">ON TOUR</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+      </nav>
+    </div>
+  </div>
+
+
+
   <!--Videos -->
   <div class="wrapper">
     <div class="container">
