--- a/tour-dates.html
+++ b/tour-dates.html
@@ -2,16 +2,41 @@
 <html language="en">
 <head>
   <title>Mipso Tour Dates</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet" />
 </head>
 <body>
-  <div class="container">
-    <div class="row about-banner">
-      <div class="col-lg-12">
-        <img src="assets/images/tour-dates/tour-dates-hero.png" />
-      </div>
+  <div class="row tour-dates-banner">
+    <div class="col-xs-12 col-md-12">
+      <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">
+            <img class="img-responsive" alt="Brand" src="./assets/images/mipso-logo.png">
+          </a>
+          <!-- <a class="navbar-brand" href="#">Brand</a> -->
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="media.html">MEDIA</a></li>
+            <li><a href="discography.html">DISCOGRAPHY</a></li>
+            <li><a href="merch.html">SHOP</a></li>
+            <li><a href="tour-dates.html">ON TOUR</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+      </nav>
     </div>
   </div>
 
@@ -169,5 +194,7 @@
   <p>MORE TOUR DATES <br /> TO BE ANNOUNCED</p>
 </div>
 
+
+<script src="./assets/javascripts/bootstrap.min.js"></script>
 </body>
 </html>
